# BIA-Ghostcoder

./: .gitignore  Example.ipynb  README.md  example_config.yaml  main.py  pyproject.toml
Example/: DEMO.ipynb  TEST.ipynb
Example/data/: data_description.txt
Experiments/: DEMO.ipynb
RefcodeDB/: BuildVectorDB.ipynb  RefCodeDB.csv  Single-Cell RNA Sequencing Data Analysis Workflow Guide.markdown  单细胞RNA测序数据分析工作流指南.markdown
RefcodeDB/prompts/: code2instru.md  codeformatting.md  instru2descrip.md
RefcodeDB/rawtable/: RefCodeDB.csv
Test/: TEST.ipynb  test.py  test_log.txt
docs/figs/: boardmix_sharelink.md
ghostcoder/: Agent.py  __init__.py  config.py  main.py  pyproject.toml
ghostcoder/RefcodeDB/: BuildVectorDB.ipynb
ghostcoder/docker/: BIA_dockers.json  __init__.py
ghostcoder/graph/: __init__.py  coder.py  crawler.py  executor.py  filemanager.py  ghostcoder.py  planer.py  rager.py  retriever.py  taskspliter.py  webcrawler.py
ghostcoder/prompts/: __init__.py  coder.critisim.md  coder.gen_fixsolut.md  coder.ouput_parse.md  coder.script_gen.md  crawler.filter_retrieve.md  crawler.filter_webpage.md  crawler.gen_webquery.md  crawler.gen_websummary.md  critisim.md  error_fix.md  executor.router.md  filemanager.data_prec.md  filemanager.data_reflex.md  filter_webpage.md  gen_fixsolut.md  ghostcoder.eval.md  ghostcoder.output.md  ghostcoder.task_parse.md  ouput_parse.md  planer.critisim.md  planer.gen_guideline.md  planer.gen_plan.md  planer.split.md  prompt_format_example.md  retriever.db_router.md  retriever.parse_webpage.md  script_gen.md  task_parse.md
(+12 files in other folders)
